2.1
* Redesigned "Wild" enemies to now only put up to 5 different kinds of enemies in any one room (between all spawns in that room), which should make it playable. This number will be reduced if necessary, and Wild is still only possible for PC. Due to the way the randomization is currently implemented, some enemies will be very likely to be vanilla (for example, the Bolt Towers in the first part of the Minnie Escort fight)
* Increased the number of bosses available when Bosses are allowed to replace normal enemies, and increased the odds of a boss replacement occuring to about 1 in 80 enemies
* If Data Demyx is to be placed in either Groundshaker or Scar's location, he will be forced to normal Demyx.
* Twilight Thorn no longer has it's AI modified

2.0
* Full redesign of the backend, to make future updates easier
* PC is now be able to load cups when enemies are randomized
* Options to not randomize big and small enemies separately. Warning should only be used on PC and it is experimental and may cause crashes
* Options to not randomize melee and ranged enemies separately. Warning should only be used on PC and it is experimental and may cause crashes
* Option to randomize enemies independently of each other. Warning should only be used on PC and it is experimental and will probably cause crashes
* Beast is added into the randomization pool, when he appears cogsworth will also appear.
* More bosses can now replace the final 3 bosses of the game (previously bosses like luxord could not appear due to his msn requirement)
* LOD Summit now has some enemies randomized, but in the timed fight it is possible some of the enemies won't spawn
* Can now choose where mickey can appear (follow the bosses he normally appears for, stay where he normally is, all bosses, no bosses)
* Added option to make OC cups give you XP and form XP
* Added quality of life option to make it possible to retry data final xemnas without going through data xemnas I again