@@ -1,0 +1,5 @@
+# B_EX260/b_ex.bdx
+# Disable nobady_call
+00002d64 00000000
+00002d68 00000000
+00002d6c 000c0000
