@@ -1,7 +1,45 @@
-# posible interesting lines
-# trap_attack_rc_receiver 3db8
-
-# trap_effect_start_bind 6452
-
-# definitely a boss where you need the debug output of a fight in ps3 ver 
-# spawn in somewhere, play until crash, then ccheck log output
+# B_EX170_LAST/b_ex.bdx
+# Disable Invitation to Dark 2
+0000d858 00000000
+0000d85c 00000000
+0000d860 00000000
+0000d888 00000000
+0000d88c 00000000
+0000d890 00000000
+0000d894 00000000
+0000d898 00000000
+0000d89c 00000000
+0000d924 00000000
+0000d928 00000000
+0000d92c 00000000
+0000d940 00000000
+0000d944 00000000
+0000d990 00000000
+0000d994 00000000
+0000d998 00000000
+0000d99c 00000000
+0000d9a0 00000000
+0000d9a4 00000000
+0000d9a8 00000000
+0000d9ac 00000000
+0000d9d8 00000073
+0000d9dc 00000000
+0000d9f0 00000000
+0000d9f4 00000000
+0000d9f8 00000000
+0000d9fc 00000000
+0000da00 00000000
+0000da3c 00000000
+0000dad4 00000000
+0000dad8 00000000
+0000db48 00000000
+0000db4c 00000000
+0000db50 00000000
+0000db54 00000000
+0000db58 75720000
+0000dba0 00000000
+0000dba4 00000000
+0000dba8 00000000
+0000dbac 00000000
+0000dbb0 00000000
+0000dbb4 00000000
