@@ -5894,6 +5894,7 @@
             0
         ],
         "name": "Armor Xemnas I",
+        "aimod": true,
         "enabled": true,
         "enmp_index": 160,
         "hp": 100,
@@ -5921,7 +5922,6 @@
         ],
         "msn_required": false,
         "msn_source_as": null,
-        "aimod": null,
         "can_be_enemy": false,
         "can_be_enemy_override": false,
         "sizeTag": null,
@@ -8588,7 +8588,7 @@
         "children": [],
         "msn_required": false,
         "msn_source_as": null,
-        "aimod": null,
+        "aimod": false,
         "mickey_source": false,
         "can_be_enemy": true,
         "can_be_enemy_override": false,
@@ -10029,6 +10029,7 @@
             0
         ],
         "name": "Final Xemnas",
+        "aimod": true,
         "can_be_enemy": true,
         "tags": [
             "solo",
@@ -10073,7 +10074,6 @@
         ],
         "msn_required": false,
         "msn_source_as": null,
-        "aimod": null,
         "mickey_source": false,
         "can_be_enemy_override": false,
         "sizeTag": null,
@@ -10131,6 +10131,7 @@
             0
         ],
         "name": "Final Xemnas (Copy)",
+        "aimod": true,
         "can_be_enemy": true,
         "tags": [
             "solo",
@@ -10172,7 +10173,6 @@
         "children": [],
         "msn_required": false,
         "msn_source_as": null,
-        "aimod": null,
         "mickey_source": false,
         "final_fight": false,
         "can_be_enemy_override": false,
