@@ -1,8 +1,9 @@
 2.1
-* Redesigned "Wild" enemies to now only put up to 5 different kinds of enemies in any one room (between all spawns in that room), which should make it playable. This number will be reduced if necessary, and Wild is still only possible for PC. Due to the way the randomization is currently implemented, some enemies will be very likely to be vanilla (for example, the Bolt Towers in the first part of the Minnie Escort fight)
+* Redesigned "Wild" enemies to now only put up to 5 different kinds of enemies in any one room (between all spawns in that room), which should make it mostly playable. This number will be reduced if necessary, and Wild is still only possible for PC. Due to the way the randomization is currently implemented, some enemies will be very likely to be vanilla (for example, the Bolt Towers in the first part of the Minnie Escort fight)
 * Increased the number of bosses available when Bosses are allowed to replace normal enemies, and increased the odds of a boss replacement occuring to about 1 in 80 enemies
 * If Data Demyx is to be placed in either Groundshaker or Scar's location, he will be forced to normal Demyx.
 * Twilight Thorn no longer has it's AI modified
+* Disable the "nobady_call" attack for Armor Xemnas 1, which should prevent crashing on PC
 
 2.0
 * Full redesign of the backend, to make future updates easier
